# grok-cli

./: .env.example  .gitignore  CHANGELOG.md  COMMIT_MESSAGE.txt  COMPLETE_FIX_SUMMARY.md  CONFIGURATION.md  CONTEXT_DISCOVERY_FIX.md  CONTEXT_FILES_GUIDE.md  CONTRIBUTING.md  Cargo.toml  ERROR_HANDLING_REPORT.md  FINAL_FIX_SUMMARY.md  FIXES_SUMMARY.md  FIX_ACTION_PLAN.md  FIX_SUMMARY.md  GROK_API_MIGRATION_SUMMARY.md  INSTALLER_CHECKLIST.md  INSTALLER_UPDATE_SUMMARY.md  LICENSE  MASTER_FIX_SUMMARY.md  MCP_RECOVERY_SUMMARY.md  MCP_STATUS.md  Makefile  PROJECT_CONTEXT_GUIDE.md  README.md  RELEASE_v0.2.3.md  RELEASE_v0.2.5.md  REVIEW_COMPLETE.md  REVIEW_QUICK_REFERENCE.md  SETUP.md  SKILL_BUILDER_ANNOUNCEMENT.md  SYSTEM_CONFIG_STATUS.md  TESTING_TOOLS.md  TESTING_TOOL_EXECUTION.md  TROUBLESHOOTING.md  VERSION_CONFIG_FIX_SUMMARY.md  analyze_tool_loops.ps1  bot_default_model .md  build.rs  config.example.toml  (+14 more)
.grok/: ## User (checkpoint)  .env.example  ENV_LOADING_FIX.md  INTEGRATION_STATUS.md  README.md  SKILLS_ENHANCEMENT_SUMMARY.md  TESTING_GUIDE.md  WEB_TOOLS_IMPROVEMENTS.md  ai_chat  config.toml  context.md
.grok copy/: ## User  config.toml
.grok-back/: ## User (checkpoint)  config.toml
.zed/: task_list.json
Doc/: ACP_FEEDBACK.md  ACP_PERMISSION_FLOW.md  CHANGELOG_FULL.md  CODE_COMMANDS_QUICK_START.md  CONFIGURATION.md  CONFIG_QUICK_START.md  CONTRIBUTING.md  EXTERNAL_ACCESS_DECISION_TREE.md  EXTERNAL_ACCESS_QUICK_START.md  FIXES.md  HOOKS_AND_EXTENSIONS.md  MAX_TOOL_LOOP_ITERATIONS.md  MCP_QUICKSTART.md  PROPOSAL_EXTERNAL_ACCESS.md  QUICK_REFERENCE.md  README.md  REASONING_QUICK_START.md  REASONING_SYSTEMS.md  REFACTORING.md  SAFETY_HOOKS.md  SECURITY.md  SESSION_DNA.md  SKILLS_MIGRATION.md  SKILLS_QUICK_START.md  SKILL_BUILDER_ANNOUNCEMENT.md  SKILL_SPECIFICATION.md  SUBAGENTS.md  TASK_GRAPH_DATA_FLOW.md  TGS_RAG.md  TGS_RAG_ARCHITECTURE.md  TROUBLESHOOTING.md  TROUBLESHOOTING_TOOL_LOOPS.md  WEB_TOOLS_SETUP.md  acp-migration-map.md  context.md  dataflow_map.md  engine_architecture.md  extensions.md  rpl_architecture.md  testing.md
config/: mod.rs
docs/: API.md  FILE_OPERATIONS.md  PROJECT_CREATION_GUIDE.md  QUICK_REFERENCE.md  agent_docs.md  (+2 more)
(+383 files in other folders)
